misc virtual thread usages